code cleanup of all unnecessary href that could cause bugs

--- a/client-myjss/src/app/modules/company/components/about-us/about-us.component.html
+++ b/client-myjss/src/app/modules/company/components/about-us/about-us.component.html
@@ -156,7 +156,7 @@
 <section class="container py-5 my-lg-3 my-xl-4 my-xxl-5">
   <div class="row g-4 g-sm-3 g-lg-4 pb-2 pb-sm-4 pb-xl-5 mb-lg-2 mb-xl-0 mb-xxl-2">
     <div class="col-sm-5">
-      <a class="d-block card-hover zoom-effect h-100" href="#" data-bs-toggle="modal" data-bs-target="#imageModal"
+      <a class="d-block card-hover zoom-effect h-100" data-bs-toggle="modal" data-bs-target="#imageModal"
         (click)="openImageModal('assets/img/societe/office_panel_1.png')">
         <div class=" d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100
         rounded-5 overflow-hidden z-2 opacity-0">
@@ -170,7 +170,7 @@
     </div>
 
     <div class="col-sm-7">
-      <a class="d-block card-hover zoom-effect h-100" href="#" data-bs-toggle="modal" data-bs-target="#imageModal"
+      <a class="d-block card-hover zoom-effect h-100" data-bs-toggle="modal" data-bs-target="#imageModal"
         (click)="openImageModal('assets/img/societe/office_panel_2.png')">
         <div
           class="d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100 rounded-5 overflow-hidden z-2 opacity-0">
@@ -187,7 +187,7 @@
   <!-- Second row of images -->
   <div class="row g-4 g-sm-3 g-lg-4 pb-2 pb-sm-4 pb-xl-5 mb-lg-2 mb-xl-0 mb-xxl-2">
     <div class="col-sm-4 d-flex align-items-stretch">
-      <a class="d-block card-hover zoom-effect h-100 w-100" href="#" data-bs-toggle="modal" data-bs-target="#imageModal"
+      <a class="d-block card-hover zoom-effect h-100 w-100" data-bs-toggle="modal" data-bs-target="#imageModal"
         (click)="openImageModal('assets/img/societe/office_panel_3.png')">
         <div
           class="d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100 rounded-5 overflow-hidden z-2 opacity-0">
@@ -201,7 +201,7 @@
     </div>
 
     <div class="col-sm-3 d-flex align-items-stretch">
-      <a class="d-block gallery-item card-hover zoom-effect h-100 w-100" href="#" data-bs-toggle="modal"
+      <a class="d-block gallery-item card-hover zoom-effect h-100 w-100" data-bs-toggle="modal"
         data-bs-target="#imageModal" (click)="openImageModal('assets/img/societe/office_panel_4.png')">
         <div
           class="d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100 rounded-5 overflow-hidden z-2 opacity-0">
@@ -215,7 +215,7 @@
     </div>
 
     <div class="col-sm-5 d-flex align-items-stretch">
-      <a class="d-block gallery-item card-hover zoom-effect h-100 w-100" href="#" data-bs-toggle="modal"
+      <a class="d-block gallery-item card-hover zoom-effect h-100 w-100" data-bs-toggle="modal"
         data-bs-target="#imageModal" (click)="openImageModal('assets/img/societe/office_panel_5.png')">
         <div
           class="d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100 rounded-5 overflow-hidden z-2 opacity-0">
