--- a/client-myjss/src/app/modules/company/components/join-us/join-us.component.html
+++ b/client-myjss/src/app/modules/company/components/join-us/join-us.component.html
@@ -156,7 +156,7 @@
     <ng-template let-image>
       <div class="card-wrapper">
         <div class="d-flex align-items-stretch h-100">
-          <a class="d-block gallery-item card-hover zoom-effect h-100 w-100 position-relative" href="#"
+          <a class="d-block gallery-item card-hover zoom-effect h-100 w-100 position-relative"
             (click)="openImageModal(image)" data-bs-toggle="modal" data-bs-target="#imageModal">
             <div
               class="d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100 rounded-5 overflow-hidden z-2 opacity-0">
