--- a/client-myjss/src/assets/css/theme.css
+++ b/client-myjss/src/assets/css/theme.css
@@ -6789,7 +6789,7 @@ textarea.form-control-lg {
   --ar-spinner-width: 2rem;
   --ar-spinner-height: 2rem;
   --ar-spinner-vertical-align: -0.125em;
-  --ar-spinner-border-width: 0.15em;
+  --ar-spinner-border-width: 0.1em;
   --ar-spinner-animation-speed: 0.75s;
   --ar-spinner-animation-name: spinner-border;
   border: var(--ar-spinner-border-width) solid currentcolor;
@@ -6797,9 +6797,10 @@ textarea.form-control-lg {
 }
 
 .spinner-border-sm {
-  --ar-spinner-width: 1rem;
-  --ar-spinner-height: 1rem;
-  --ar-spinner-border-width: 0.1em;
+  --ar-spinner-width: 16px !important;
+  --ar-spinner-height: 16px !important;
+  --ar-spinner-border-width: 0.1em !important;
+  ;
 }
 
 @keyframes spinner-grow {
