--- a/client-jss/src/app/main/components/post/post.component.html
+++ b/client-jss/src/app/main/components/post/post.component.html
@@ -61,7 +61,7 @@ Main START -->
 
         <div class="subscription-overlay d-flex justify-content-center align-items-center flex-column text-center p-4"
           style="position: relative; background: rgba(255, 255, 255, 0.85); color: #333; margin-top: -170px; padding-top: 20px;"
-          *ngIf="post.premium">
+          *ngIf="post.isPremium">
           <h2 class="fw-bold">Vous souhaitez lire la suite ?</h2>
           <p>Lisez cette article pour seulement 1 € ou abonnez-vous pour profiter de cet article en intégralité et de
             bien d'autres !</p>
