--- a/client-jss/src/app/main/components/header/header.component.html
+++ b/client-jss/src/app/main/components/header/header.component.html
@@ -1,3 +1,155 @@
+<header class="header-area">
+  <div class="header-navbar-top py-1 bg-light  d-none d-lg-block">
+    <div class="container">
+      <div class="header-newsticker-menu">
+        <div class="newsticker">
+          <div class="newsticker-btn">Latest News</div>
+          <div class="newsticker-list">
+            <ul class="list-inline">
+              <li>
+                <a href="#">A powerful, flexible and animated vertical news ticker plugin.</a>
+              </li>
+              <li>
+                <a href="#">Provides hight flexibility thanks to numerous callbacks & methods.</a>
+              </li>
+              <li>
+                <a href="#">Fully customizable to every kind of vertical scrolling need.</a>
+              </li>
+              <li>
+                <a href="#">Light-weight and optimized JQuery plugin.</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="newsticker-social">
+          <ul class="list-inline">
+            <li class="list-inline-item"><a class="bg-primary" href="#"><i class="fab fa-facebook-f"></i></a>
+            </li>
+            <li class="list-inline-item"><a class="bg-info" href="#"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li class="list-inline-item"><a class="bg-danger" href="#"><i class="fab fa-instagram"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="header-navbar-middle d-none d-lg-block">
+    <div class="container">
+      <div class="navbar-brand-wrapper py-3 d-flex justify-content-between align-items-center">
+        <a class="navbar-brand" href="index.html">
+          <img class="lazyload" src="assets/images/header-brand.png" alt="image">
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="header-navbar-bottom pt-2 pt-lg-0 border-top border-light">
+    <div class="container themeix-menu-selector">
+      <nav class="navbar navbar-expand-lg">
+        <div class="collapse navbar-collapse" id="main_nav">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item dropdown"> <a class="nav-link  dropdown-toggle" href="index.html">île de France </a>
+
+              <ul class="dropdown-menu">
+                <li> <a *ngFor="let department of departments" class="dropdown-item" style="cursor: pointer;"
+                    (click)="openDepartment(department,$event)">{{department.code!="0" ?(department.code+ " - ")
+                    :""}}{{department.name}}</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown has-megamenu">
+              <a class="nav-link dropdown-toggle" href="#"> Explore </a>
+              <div class="dropdown-menu megamenu">
+                <div class="row">
+                  <div class="col-md-3">
+                    <h6 class="text-danger">Home Variations</h6>
+                    <ul class="list-inline">
+                      <li><a href="index-2.html">Classic Blog</a></li>
+                      <li><a href="index-3.html">Corporate Blog</a></li>
+                      <li><a href="index-4.html">Recipe Blog</a></li>
+                      <li><a href="index-5.html">Sports Blog</a></li>
+                      <li><a href="index-6.html">Full Width Blog</a></li>
+                    </ul>
+                  </div>
+                  <div class="col-md-3">
+                    <h6 class="text-danger">Categories</h6>
+                    <ul class="list-inline">
+                      <li><a href="category.html">Cricket</a></li>
+                      <li><a href="category.html">Football</a></li>
+                      <li><a href="category.html">Leggings</a></li>
+                      <li><a href="category.html">Cycling</a></li>
+                      <li><a href="category.html">Golf</a></li>
+                    </ul>
+                  </div>
+                  <div class="col-md-3">
+                    <h6 class="text-danger">Pages</h6>
+                    <ul class="list-inline">
+                      <li><a href="login.html">Login</a></li>
+                      <li><a href="register.html">Register</a></li>
+                      <li><a href="forgot-password.html">Forgot Password</a></li>
+                      <li><a href="faq.html">FAQ</a></li>
+                      <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                    </ul>
+                  </div>
+                  <div class="col-md-3">
+                    <h6 class="text-danger">Blog Pages</h6>
+                    <ul class="list-inline">
+                      <li><a href="single.html">Post Layout 1</a></li>
+                      <li><a href="single-2.html">Post Layout 2</a></li>
+                      <li><a href="single-3.html">Post Layout 3</a></li>
+                      <li><a href="blog.html">Blog Layout 1</a></li>
+                      <li><a href="blog-2.html">Blog Layout 2</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#"> Pages </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="about.html"> About Us </a></li>
+                <li><a class="dropdown-item" href="author.html">Author</a></li>
+                <li><a class="dropdown-item" href="authors.html">Authors</a></li>
+                <li><a class="dropdown-item" href="category.html"> Category</a></li>
+                <li><a class="dropdown-item" href="categories.html"> Categories</a></li>
+                <li><a class="dropdown-item" href="faq.html"> FAQ </a></li>
+                <li><a class="dropdown-item" href="privacy-policy.html"> Privacy Policy</a></li>
+                <li><a class="dropdown-item" href="blog.html">Blog</a></li>
+                <li><a class="dropdown-item" href="blog-2.html">Blog v2</a></li>
+                <li><a class="dropdown-item" href="404.html"> 404</a></li>
+              </ul>
+            </li>
+            <li class="nav-item" *ngFor="let category of categories"> <a class="nav-link"
+                [ngClass]="{'active':getCurrentRoute().indexOf('/category')>=0 && getCurrentRoute().indexOf('/'+category.slug)>=0}"
+                style="cursor: pointer;" (click)="openCategoryPosts(category,$event)">{{category.name}}</a></li>
+            <li class="nav-item"><a class="nav-link"
+                href="https://themeix.com/product/newsfeed-news-magazine-website-html-site-template/"> Podcast
+                <span><i class="fas fa-bolt"></i></span></a></li>
+          </ul>
+        </div>
+        <div class="search-modal" data-bs-toggle="modal" data-bs-target="#search-modal"><a class="nav-link" href="#"> <i
+              class="fas fa-search"></i> </a>
+        </div>
+      </nav>
+      <div class="modal fade" id="search-modal" data-bs-backdrop="static">
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-body">
+              <form class="forms">
+                <div class="input-group">
+                  <span class="input-group-text"><i class="fas fa-search"></i></span>
+                  <input type="text" class="form-control" placeholder="Search Here">
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
+
 <header class="navbar-light navbar-sticky header-static">
   <div class="navbar-top d-none d-lg-block small">
     <div class="container">
