--- a/client-jss/src/assets/scss/style.scss
+++ b/client-jss/src/assets/scss/style.scss
@@ -1,47 +1,86 @@
-// Bootstrap variables
-@import "../vendor/bootstrap/scss/functions";
-@import "../vendor/bootstrap/scss/variables";
+/*------------------------------------------------------------------
+[Master Stylesheet]
 
-// Theme variables
-@import "variables";
-@import "variables-dark";
+Project:    Newsfeed - Responsive News Magazine Bootstrap 5 Site Template
+Template URL : https://themeix.com/product/newsfeed-news-magazine-website-html-site-template/
+Version:    2.0.0
+Created:  26/03/21
+Author Name:  themeix
+Primary use:  blog, news, magazine
+-------------------------------------------------------------------*/
 
-// User variables
-@import "user-variables";
 
-// Bootstrap core
-@import "../vendor/bootstrap/scss/bootstrap";
+/*------------------------------------------------------------------
+[Table of contents]
 
-// Extended bootstrap utilities 
-@import "custom/utilities";
-@import "../vendor/bootstrap/scss/utilities/api";
+0. Bootstrap
+1. Normalize Css
+2. Header Area
+3. Blog Area
+4. Support Area
+5. Cta Area
+6. Login Area
+7. Contact Area
+8. Footer Area
 
-// Extended bootstrap components
-@import "custom/breadcrumb";
-@import "custom/buttons";
-@import "custom/card";
-@import "custom/dropdowns";
-@import "custom/list-group"; 
-@import "custom/nav";
-@import "custom/navbar";
-@import "custom/pagination";
-@import "custom/progress";
-@import "custom/reboot";
-@import "custom/type";
-@import "custom/badge";
-@import "custom/tables";
 
-// Theme components
-@import "components/apexchart";
-@import "components/general";
-@import "components/avatar";
-@import "components/divider";
-@import "components/overlay";
-@import "components/tiny-slider";
-@import "components/utilities";
+-------------------------------------------------------------------*/
+// Bootstrap Variables
+@import "normalize/variables";
+// Bootstrap Component
+@import "./node_modules/bootstrap/scss/functions";
+@import "./node_modules/bootstrap/scss/variables";
+@import "./node_modules/bootstrap/scss/mixins";
+@import "./node_modules/bootstrap/scss/utilities";
+@import "./node_modules/bootstrap/scss/root";
+@import "./node_modules/bootstrap/scss/reboot";
+@import "./node_modules/bootstrap/scss/type";
+@import "./node_modules/bootstrap/scss/images";
+@import "./node_modules/bootstrap/scss/containers";
+@import "./node_modules/bootstrap/scss/grid";
+@import "./node_modules/bootstrap/scss/tables";
+@import "./node_modules/bootstrap/scss/forms";
+@import "./node_modules/bootstrap/scss/buttons";
+@import "./node_modules/bootstrap/scss/transitions";
+@import "./node_modules/bootstrap/scss/dropdown";
+@import "./node_modules/bootstrap/scss/button-group";
+@import "./node_modules/bootstrap/scss/nav";
+@import "./node_modules/bootstrap/scss/navbar";
+@import "./node_modules/bootstrap/scss/card";
+@import "./node_modules/bootstrap/scss/accordion";
+@import "./node_modules/bootstrap/scss/breadcrumb";
+@import "./node_modules/bootstrap/scss/pagination";
+@import "./node_modules/bootstrap/scss/badge";
+@import "./node_modules/bootstrap/scss/alert";
+@import "./node_modules/bootstrap/scss/progress";
+@import "./node_modules/bootstrap/scss/list-group";
+@import "./node_modules/bootstrap/scss/close";
+@import "./node_modules/bootstrap/scss/toasts";
+@import "./node_modules/bootstrap/scss/modal";
+@import "./node_modules/bootstrap/scss/tooltip";
+@import "./node_modules/bootstrap/scss/popover";
+@import "./node_modules/bootstrap/scss/carousel";
+@import "./node_modules/bootstrap/scss/spinners";
+@import "./node_modules/bootstrap/scss/helpers";
+@import "./node_modules/bootstrap/scss/utilities/api";
 
-// Theme dark
-@import "dark-mode";
+// Template Css
 
-// In this scss you can write your scss/css
-@import "user";
+@import'normalize/primary';
+@import'template/header';
+@import'template/blog';
+@import'template/support';
+@import'template/cta';
+@import'template/login';
+@import'template/contact';
+@import'template/footer';
+
+
+
+
+// Responsive Css
+
+@import "./assets/scss/normalize/responsive";
+
+  
+
