first version of header

--- a/client-jss/src/app/main/components/header/header.component.html
+++ b/client-jss/src/app/main/components/header/header.component.html
@@ -1,33 +1,31 @@
 <header class="header-area">
-  <div class="header-navbar-top py-1 bg-light  d-none d-lg-block">
+  <div class="header-navbar-top py-1 bg-light d-none d-lg-block">
     <div class="container">
-      <div class="header-newsticker-menu">
-        <div class="newsticker">
-          <div class="newsticker-btn">Latest News</div>
-          <div class="newsticker-list">
-            <ul class="list-inline">
-              <li>
-                <a href="#">A powerful, flexible and animated vertical news ticker plugin.</a>
-              </li>
-              <li>
-                <a href="#">Provides hight flexibility thanks to numerous callbacks & methods.</a>
-              </li>
-              <li>
-                <a href="#">Fully customizable to every kind of vertical scrolling need.</a>
-              </li>
-              <li>
-                <a href="#">Light-weight and optimized JQuery plugin.</a>
-              </li>
-            </ul>
-          </div>
+      <div class="d-flex justify-content-between align-items-center flex-wrap py-0">
+        <div class="d-flex flex-wrap">
+          <a href="#" class="me-2">PUBLIER UNE ANNONCE LÉGALE <i class="fa fa-external-link-alt ms-1"></i></a>
+          <a href="#" class="middle-link me-2 px-2 ">DÉPOSER UNE FORMALITÉ <i
+              class="fa fa-external-link-alt ms-1"></i></a>
+          <a href="#">CONSULTER UNE ANNONCE LÉGALE <i class="fa fa-external-link-alt ms-1"></i></a>
         </div>
-        <div class="newsticker-social">
-          <ul class="list-inline">
-            <li class="list-inline-item"><a class="bg-primary" href="#"><i class="fab fa-facebook-f"></i></a>
+        <div class="d-flex align-items-center flex-wrap gap-2">
+          <a href="#">BLOG</a>
+          <a href="#">NEWSLETTER</a>
+          <ul class="list-inline mb-0 d-flex gap-1">
+            <li class="list-inline-item">
+              <a class="social-icon rounded-circle d-flex align-items-center justify-content-center" href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
             </li>
-            <li class="list-inline-item"><a class="bg-info" href="#"><i class="fab fa-twitter"></i></a>
+            <li class="list-inline-item">
+              <a class="social-icon rounded-circle d-flex align-items-center justify-content-center" href="#">
+                <i class="fab fa-twitter"></i>
+              </a>
             </li>
-            <li class="list-inline-item"><a class="bg-danger" href="#"><i class="fab fa-instagram"></i></a>
+            <li class="list-inline-item">
+              <a class="social-icon rounded-circle d-flex align-items-center justify-content-center" href="#">
+                <i class="fab fa-instagram"></i>
+              </a>
             </li>
           </ul>
         </div>
@@ -36,16 +34,22 @@
   </div>
   <div class="header-navbar-middle d-none d-lg-block">
     <div class="container">
-      <div class="navbar-brand-wrapper py-3 d-flex justify-content-between align-items-center">
-        <a class="navbar-brand" href="index.html">
-          <img class="lazyload" src="assets/images/header-brand.png" alt="image">
+      <div class="navbar-brand-wrapper py-1 d-flex justify-content-between align-items-center">
+        <a class="btn btn-dark" href="#">MyJSS<i class="fa fa-external-link-alt ms-1"></i></a>
+        <a class="navbar-brand ms-5 ps-3" href="index.html">
+          <img class="lazyload" src="assets/images/homepage/logo.svg" alt="image">
         </a>
+        <div>
+          <a class="btn btn-light me-2" href="#">Se connecter</a>
+          <a class="btn btn-yellow" href="#">S'abonner</a>
+        </div>
+
       </div>
     </div>
   </div>
   <div class="header-navbar-bottom pt-2 pt-lg-0 border-top border-light">
     <div class="container themeix-menu-selector">
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar text-uppercase text-white-100 navbar-expand-lg">
         <div class="collapse navbar-collapse" id="main_nav">
           <ul class="navbar-nav me-auto">
             <li class="nav-item dropdown"> <a class="nav-link  dropdown-toggle" href="index.html">île de France </a>
@@ -57,74 +61,14 @@
                 </li>
               </ul>
             </li>
-            <li class="nav-item dropdown has-megamenu">
-              <a class="nav-link dropdown-toggle" href="#"> Explore </a>
-              <div class="dropdown-menu megamenu">
-                <div class="row">
-                  <div class="col-md-3">
-                    <h6 class="text-danger">Home Variations</h6>
-                    <ul class="list-inline">
-                      <li><a href="index-2.html">Classic Blog</a></li>
-                      <li><a href="index-3.html">Corporate Blog</a></li>
-                      <li><a href="index-4.html">Recipe Blog</a></li>
-                      <li><a href="index-5.html">Sports Blog</a></li>
-                      <li><a href="index-6.html">Full Width Blog</a></li>
-                    </ul>
-                  </div>
-                  <div class="col-md-3">
-                    <h6 class="text-danger">Categories</h6>
-                    <ul class="list-inline">
-                      <li><a href="category.html">Cricket</a></li>
-                      <li><a href="category.html">Football</a></li>
-                      <li><a href="category.html">Leggings</a></li>
-                      <li><a href="category.html">Cycling</a></li>
-                      <li><a href="category.html">Golf</a></li>
-                    </ul>
-                  </div>
-                  <div class="col-md-3">
-                    <h6 class="text-danger">Pages</h6>
-                    <ul class="list-inline">
-                      <li><a href="login.html">Login</a></li>
-                      <li><a href="register.html">Register</a></li>
-                      <li><a href="forgot-password.html">Forgot Password</a></li>
-                      <li><a href="faq.html">FAQ</a></li>
-                      <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                    </ul>
-                  </div>
-                  <div class="col-md-3">
-                    <h6 class="text-danger">Blog Pages</h6>
-                    <ul class="list-inline">
-                      <li><a href="single.html">Post Layout 1</a></li>
-                      <li><a href="single-2.html">Post Layout 2</a></li>
-                      <li><a href="single-3.html">Post Layout 3</a></li>
-                      <li><a href="blog.html">Blog Layout 1</a></li>
-                      <li><a href="blog-2.html">Blog Layout 2</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#"> Pages </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="about.html"> About Us </a></li>
-                <li><a class="dropdown-item" href="author.html">Author</a></li>
-                <li><a class="dropdown-item" href="authors.html">Authors</a></li>
-                <li><a class="dropdown-item" href="category.html"> Category</a></li>
-                <li><a class="dropdown-item" href="categories.html"> Categories</a></li>
-                <li><a class="dropdown-item" href="faq.html"> FAQ </a></li>
-                <li><a class="dropdown-item" href="privacy-policy.html"> Privacy Policy</a></li>
-                <li><a class="dropdown-item" href="blog.html">Blog</a></li>
-                <li><a class="dropdown-item" href="blog-2.html">Blog v2</a></li>
-                <li><a class="dropdown-item" href="404.html"> 404</a></li>
-              </ul>
-            </li>
             <li class="nav-item" *ngFor="let category of categories"> <a class="nav-link"
                 [ngClass]="{'active':getCurrentRoute().indexOf('/category')>=0 && getCurrentRoute().indexOf('/'+category.slug)>=0}"
                 style="cursor: pointer;" (click)="openCategoryPosts(category,$event)">{{category.name}}</a></li>
-            <li class="nav-item"><a class="nav-link"
-                href="https://themeix.com/product/newsfeed-news-magazine-website-html-site-template/"> Podcast
-                <span><i class="fas fa-bolt"></i></span></a></li>
+            <li class="nav-item"><a class="nav-link podcast-nav-link" href="#">Podcast<span><i class="fas fa-bolt"> </i>
+                </span></a></li>
+            <li class="nav-item"><a class="nav-link" href="#"><img src="/assets/images/premium-icon.svg"
+                  class="me-1" />Premium
+              </a></li>
           </ul>
         </div>
         <div class="search-modal" data-bs-toggle="modal" data-bs-target="#search-modal"><a class="nav-link" href="#"> <i
@@ -278,7 +222,7 @@
               connecter</a><!-- TODO -->
           </li>
         </ul>
-        <ul class="navbar-nav navbar-nav-scroll mx-auto">
+        <ul class="navbar-nav navbar-nav-scroll mx-auto text-uppercase">
 
           <!-- Nav item articles -->
           <li class="nav-item dropdown">
