--- a/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
+++ b/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
@@ -33,29 +33,39 @@
 
 <description-my-account></description-my-account>
 
-
-<section *ngIf="carouselAnnouncementPosts && carouselAnnouncementPosts.length>0" class="background-opacity">
-  <div class="container overflow-hidden">
-    <generic-swiper [items]="carouselAnnouncementPosts"
-      [firstItemImage]="'assets/img/announcement/carousel_announcement_init.jpg'"
-      title="Les annonces légales les plus courantes">
-      <ng-template let-post>
-        <div class="card-wrapper">
-          <div class="card card-carousel">
-            <div class="card-body">
-              <h4 class="card-title card-title-truncate">{{post.titleText}}</h4>
-              <p class="card-text text-gray card-text-truncate" [innerHTML]="post.excerptText | trustHtml"></p>
-            </div>
-            <div class="card-footer ">
-              <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" (click)="openPost(post.slug,$event)"
-                aria-label="Learn more">
-                <i class="ai-arrow-right"></i>
-              </a>
+<section *ngIf="carouselAnnouncementPosts && carouselAnnouncementPosts.length>0" class="background-opacity container">
+  <div class="row">
+    <div class="col-3 pt-5 mt-3 px-0 me-n3">
+      <h2 class="h1 pb-3 pt-5  mb-lg-4 text-white text-nowrap" style="overflow: visible;">
+        Les annonces légales les plus courantes
+      </h2>
+      <div class="card-wrapper-announcement">
+        <div class="card h-100 border-0">
+          <img src="assets/img/announcement/carousel_announcement_init.jpg" class="card first-img h-100"
+            alt="Card image">
+        </div>
+      </div>
+    </div>
+    <div class="container overflow-hidden col-9 ps-0">
+      <generic-swiper [items]="carouselAnnouncementPosts" title="">
+        <ng-template let-post>
+          <div class="card-wrapper-announcement ps-0">
+            <div class="card card-carousel">
+              <div class="card-body">
+                <h4 class="card-title card-title-truncate">{{post.titleText}}</h4>
+                <p class="card-text text-gray card-text-truncate" [innerHTML]="post.excerptText | trustHtml"></p>
+              </div>
+              <div class="card-footer ">
+                <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" (click)="openPost(post.slug,$event)"
+                  aria-label="Learn more">
+                  <i class="ai-arrow-right"></i>
+                </a>
+              </div>
             </div>
           </div>
-        </div>
-      </ng-template>
-    </generic-swiper>
+        </ng-template>
+      </generic-swiper>
+    </div>
   </div>
 </section>
 
