--- a/client-myjss/src/app/modules/my-services/formality/formality.component.css
+++ b/client-myjss/src/app/modules/my-services/formality/formality.component.css
@@ -1,6 +1,6 @@
 .card-title-truncate {
   display: -webkit-box;
-  -webkit-line-clamp: 4;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -9,7 +9,7 @@
 
 .card-text-truncate {
   display: -webkit-box;
-  -webkit-line-clamp: 5;
+  -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -34,4 +34,12 @@
 
 .card-wrapper {
   height: 500px;
+}
+
+.card-wrapper-announcement {
+  height: 350px;
+}
+
+.custom-margin-top {
+  margin-top: 19px !important;
 }
