--- a/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
+++ b/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    <section *ngIf="searchResults && searchResults.length > 0" class="container-custom">
+    <section *ngIf="searchResults && searchResults.length > 0" class="container-custom" #searchResultsSection>
       <div class="search-result border-0 rounded-3 custom-dropdown">
         <ul class="list-group mt-2">
           <li class="list-group-item card py-2" *ngFor="let post of searchResults">
